--- a/Lucia/template/dl.html
+++ b/Lucia/template/dl.html
@@ -1,12 +1,17 @@
+<!-- this code is written by @biisal tg:biisal-files  -->
+<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
+
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SilentXBotz | {{file_name}}</title>
+    <title>{{file_name}}</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
-    <link rel="stylesheet" href="https://biisal.github.io/Resources/StreamCSS.css">
-    <link rel="stylesheet" href="https://biisal.github.io/Resources/playerCss.css">
+    <link rel="stylesheet" href="https://aeditx03.github.io/resources/StreamCSS.css">
+    <link rel="stylesheet" href="https://aeditx03.github.io/resources/playerCss.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500;700&display=swap" rel="stylesheet">
@@ -14,28 +19,36 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
+<!-- this code is written by @biisal tg:biisal-files  -->
+<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
+
 <body>
     <nav>
         <div class="nleft">
-            <a href="https://t.me/SilentXBotz">
-                <h3 id="heading" style="z-index: 100;" class="magnet">SilentXBotz</h3>
+            <a href="https://t.me/ArrowFlix2">
+                <!-- if u are trying to change the header name please remove the title text from bottom line  -->
+                <h4 id="heading" style="z-index: 100;" class="magnet">ArrowFlix</h4>
             </a>
         </div>
         <div class="nryt">
-            <a class="home-btn magnet" href="#main" onclick="toggleWidthnav(this)">Home</a>
+            <a class="home-btn magnet" href="#main" onclick="toggleWidthnav(this)">HOME</a>
 
-            <a href="#sec1" class="about-btn magnet" onclick="toggleWidthnav(this)">About</a>
+            <a href="#sec1" class="about-btn magnet" onclick="toggleWidthnav(this)">ABOUT</a>
         </div>
     </nav>
     <center>
-        <div class="about-nav">            
-            <a href="#sec1" class="wlcm magnet" onclick="toggleWidth(this)">Welcome</a>
-            <a href="#sec2" class="abt-chnl magnet" onclick="toggleWidth(this)">Channels</a>
-            <a href="#sec3" class="magnet bot-btn" onclick="toggleWidth(this) , bot_btn_clicked()">Bots</a>
-            <a href="#sec4" class="magnet contact-btn" onclick="toggleWidth(this)">Let's Talk</a>
+        <div class="about-nav">
+            <a href="#sec1" class="wlcm magnet" onclick="toggleWidth(this)">WELCOME</a>
+            <a href="#sec2" class="abt-chnl magnet" onclick="toggleWidth(this)">CHANNELS</a>
+            <a href="#sec3" class="magnet bot-btn" onclick="toggleWidth(this) , bot_btn_clicked()">BOTS</a>
+            <a href="#sec4" class="magnet contact-btn" onclick="toggleWidth(this)">LET'S TALK</a>
         </div>
     </center>
+    <!-- this code is written by @biisal tg:biisal-files  -->
+    <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
+
     <div class="outer">
         <div class="inner">
             <div class="main" id="main">
@@ -43,7 +56,8 @@
                     width="100%"></video>
                 <div class="player"></div>
                 <div class="file-name">
-                    <h4>File Name : </h4>                  
+                    <h4>File name : </h4>
+                    <br>
                     <p id="myDiv">{{file_name}}</p>
                 </div>
                 <div class="downloadBtn">
@@ -65,19 +79,92 @@
                             src="https://i.postimg.cc/Zncc9YLq/Pngtree-download-icon-3581467.png" alt="">download video
                     </button>
                 </div>
-            </div>            
-        </div>
-    </div>
-        <footer>
-            <center>
-                <div class="copyright">
-                    <h5 class="text-center">Copyright © 2024 <a href="https://t.me/SilentXBotz"><span
-                                style="font-weight: 700;">SilentXBotz</span></a>. All
-                        Rights Reserved.</h5>
+
+            </div>
+            <div class="abt">
+                <div class="about">
+                    <div class="about-dets">
+                        <div class="abt-sec" id="sec1" style="padding: 160px 30px;">
+                            <h1 style="text-align: center;">WELCOME TO OUR                  <Span>STREAMING WEBSITE</Span></h1>
+                            <p style="text-align: center; line-height: 2;word-spacing: 2px;  letter-spacing: 0.8px;">
+                                We're
+                                thrilled to have <span>you</span> here.
+                                Get ready for an
+                                amazing <span>experience</span>
+                                filled with <span>entertainment</span>, <span>fun</span>, and <span>surprises</span>.
+                                Grab
+                                your snacks, sit back, and <span>enjoy</span> the show !
+                            </p>
+                        </div>
+                        <div class="abt-sec" id="sec2">
+                            <h1>OUR ALL <span>CHANNELS</span> LIST</h1>
+                            <div class="links chnl-link">
+                                <a class="magnet" href="https://t.me/ArrowFlix2"><button>ARROWFLIX 
+                                        </button></a>
+                                <a class="magnet" href="https://t.me/TorrentSeriess"><button>MAIN CHANNEL
+                                        </button></a>
+                                <a class="magnet" href="https://t.me/AFlixSupportBot"><button>ARROWFLIX REQUEST 
+                                        </button></a>
+                            </div>
+                        </div>
+                        <div class="abt-sec" id="sec3">
+                            <h1>OUR ALL <span>BOTS</span> LIST</h1>
+                            <div class="links bot-link">
+                                <a class="magnet" href="https://t.me/ArrowFlixBot"><button>ARROWFLIXBOT
+                                        </button></a>
+                            </div>
+                        </div>
+                        <div class="abt-sec" id="sec4">
+                            <!-- this code is written by @biisal tg:biisal-files  -->
+                            <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
+
+                            <p style="text-align: center;">YOU CAN <Span>TALK</Span> WITH US FOR YOUR <Span>SUPPORT</Span> AND YOU CAN <Span>REPORT</Span> THROUGH
+                                TELEGRAM</p>
+                            <div class="links contact">
+                                <a href="https://t.me/AFlixSupportBot"><button>CONTACT US</button></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </center>
+            </div>
+        </div>
+        <footer>
+            <div class="mid">
+                <h1 class="mid-text">VISIT <a href="#sec3" onclick="bot_btn_clicked()"><span>OUR BOT</span></a>
+                    FOR
+                    MORE
+                    INFO</h1>
+            </div>
+
+            <div class="last-text">
+                <p class="text-center pb-20 pr-6 pl-6 absolute" style="font-weight: 500;">
+                    Welcome to our online streaming platform! Our website allows users to generate streamable links for
+                    various files using Telegram bot. Please note that we are not responsible for the content shared or
+                    streamed through our service. Users are encouraged to respect copyright laws and adhere to our
+                    community
+                    guidelines. Enjoy easy, hassle-free file streaming service.
+                </p>
+            </div>
+
+            <!-- this code is written by @biisal tg:biisal-files  -->
+            <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
+
+
+
+            <div class="copyright ">
+                <h5 class="text-center">Copyright © 2024 <a href="https://t.me/AbdallaGX"><span
+                            style="font-weight: 700;">Abdalla</span></a>. All
+                    Rights Reserved.</h5>
+                <div class="icons">
+                    <a href="https://t.me/ArrowFlix2"><i class="fa-brands fa-telegram fa-lg"></i></a>
+                </div>
+                <h4 style="font-weight: 700;">This Page Is Designed By <a
+                        href="https://t.me/ArrowFlix2"><span>ArrowFlix</span></a></h4>
+            </div>
         </footer>
 </body>
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
@@ -97,6 +184,9 @@
     new WOW().init();
 </script>
 <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
-<script src="https://biisal.github.io/Resources/StreamJs.js"></script>
-<script src="script.js"></script>
+<script src="https://aeditx03.github.io/resources/StreamJs.js"></script>
+
 </html>
+
+<!-- this code is written by @biisal tg:biisal-files  -->
+<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
